--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pt.uminho.ceb.biosystems</groupId>
 	<artifactId>JBiclustGE</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>JBiclustGE</name>
 	<description>Biclustering tool for gene expression analysis</description>
 
